infrastructure/longhorn-system/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    cert-manager.io/cluster-issuer: infisical-acme
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - longhorn.internal.nullmonkeys.com
      secretName: longhorn-frontend-tls-secret

  rules:
    - host: longhorn.internal.nullmonkeys.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
